mirror: muse c541f548..94340d91 (2G-b task store read surface)
